--- a/client/src/app/account/login/login.component.html
+++ b/client/src/app/account/login/login.component.html
@@ -5,7 +5,7 @@
         <h1 class="h3 mb-3 font-weight-normal">Login</h1>
       </div>
 
-      
+      <app-text-input></app-text-input>
      
       <button [disabled]="loginForm.invalid" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
     </form>
