Last comm - 19 section

--- a/client/src/app/shared/components/stepper/stepper.component.html
+++ b/client/src/app/shared/components/stepper/stepper.component.html
@@ -6,10 +6,8 @@
             [class.active]="selectedIndex === i"
             class="nav-link py-3 text-uppercase font-weight-bold btn-block">
             {{step.label}}
-            </button>
+        </button>
         </li>
     </ul>
-<div>
-    <ng-container>[ngTemplateOutlet]="selected.content"</ng-container>
 </div>
-</div>
+  <ng-container [ngTemplateOutlet]="selected.content"></ng-container>
