--- a/client/src/app/shared/components/stepper/stepper.component.scss
+++ b/client/src/app/shared/components/stepper/stepper.component.scss
@@ -7,7 +7,7 @@ button.nav-link {
         outline: none;
     }
     &.active:hover {
-        color: white
+        color: white;
     }
     & :active {
         outline: none;
