--- a/client/src/app/checkout/checkout-payment/checkout-payment.component.html
+++ b/client/src/app/checkout/checkout-payment/checkout-payment.component.html
@@ -5,7 +5,7 @@
     <button class="btn btn-outline-primary" cdkStepperPrevious>
         <i class="fa fa-angle-left"></i> Back to Rewiew
     </button>
-    <button class="btn btn-primary">
+    <button class="btn btn-primary" (click)="submitOrder()">
         Submit Order <i class="fa fa-angle-right"></i> 
     </button>
 </div>
