--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -6,7 +6,9 @@
           
             <h5 class="text-warning ml-3 mt-4 mb-3">Sort</h5>
             <select class="custom-select mb-4" (change)="onSortSelected($event.target.value)">
-                <option *ngFor="let sort of sortOptions" [value]="sort.value">
+                <option *ngFor="let sort of sortOptions"
+                [selected]="shopParams.sort === sort.value"
+                [value]="sort.value">
                     {{sort.name}}
                 </option>
             </select>
@@ -57,6 +59,7 @@
                 <app-pager
                     [pageSize]="shopParams.pageSize"
                     [totalCount]="totalCount"
+                    [pageNumber]="shopParams.pageNumber"
                     (pageChanged)="onPageChanged($event)"
                 ></app-pager
                     >
